# assistant_gui

./: Cargo.toml  README.md
src/: main.rs  style.rs
src/plugins/: mod.rs  news.rs  state.rs  weather.rs
