[package]
name = "assistant_gui"
version = "0.1.0"
authors = ["julien <julien.gabryelewicz2@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
directories-next = "2.0"
iced = {version = "0.2", features = ["async-std","debug"] }
json = "0.12.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rss = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.deb]
assets = [
    ["target/release/assistant_gui", "usr/bin/assistant_gui", "755"]
]